--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7066,7 +7066,8 @@
     <string name="help_url_network_dashboard" translatable="false"></string>
     <string name="help_url_connected_devices" translatable="false"></string>
     <string name="help_url_apps_and_notifications" translatable="false"></string>
-    <string name="help_url_apps_permissions" translatable="false"></string>
+    <!-- [AHMED] added-->
+    <string name="help_url_space_manager" translatable="false"></string>
     <string name="help_url_night_display" translatable="false"></string>
     <string name="help_url_dark_theme" translatable="false"></string>
     <string name="help_url_screen_saver" translatable="false"></string>
@@ -7332,10 +7333,8 @@
     <string name="app_and_notification_dashboard_title">Apps &amp; notifications</string>
     <!-- Summary for Apps & Notification settings, explaining a few important settings under it [CHAR LIMIT=NONE]-->
     <string name="app_and_notification_dashboard_summary">Recent apps, default apps</string>
-     <!-- Title for setting tile leading to Apps Permissions settings [CHAR LIMIT=40]-->
-    <string name="app_permissions_new">Apps Permissions</string>
-    <!-- Summary for Apps & Notification settings, explaining a few important settings under it [CHAR LIMIT=NONE]-->
-    <string name="app_permission_dashboard_summary">Revoked and Granted permission list of apps</string>
+    <!-- [AHMED] Summary for Space Manager [CHAR LIMIT=NONE]-->
+    <string name="space_manager_dashboard_summary">Restricted permissions by space authorities</string>
     <!-- Toast shown when an app in the work profile attempts to open notification settings. The apps in the work profile cannot access notification settings. [CHAR LIMIT=NONE] -->
     <string name="notification_settings_work_profile">Notification access is not available for apps in the work profile.</string>
     <!-- Title for setting tile leading to account settings [CHAR LIMIT=40]-->
@@ -7375,9 +7374,8 @@
     <string name="keywords_time_zone">timezone</string>
     <!-- Search keyword for "Display over other apps" settings [CHAR_LIMIT=NONE]-->
     <string name="keywords_draw_overlay">Chat head</string>
-
+    <!-- [AHMED] added string for space manager -->
     <string name="space_manager">Space Manager</string>
-
     <!-- Search keyword for "Flashlight" settings [CHAR_LIMIT=NONE]-->
     <string name="keywords_flashlight">Flashlight, Light, Torch</string>
     <string name="keywords_change_wifi_state">wifi, wi-fi, toggle, control</string>
